--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "kennethrapp/embedbug",
-  "version": "1.0.0-alpha",
+  "version": "1.1.0-alpha",
   "description": "web crawler and profiler for PHP",
   "license": "MIT",
   "keywords": ["php","web crawler"],
@@ -22,6 +22,7 @@
  			}
  		}
  	 }],
+	"minimum-stability":"dev",
 	"require": {
 		"lukapusic/random-uagent":"dev-master"
 	},
